# gradedtcg

./: .env.example  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: build.yml  integration.yml  publish.yml  styles.yml  tests.yml
app/core/: config.py
app/core/settings/: app.py  base.py  development.py  test.py
app/db/: errors.py
app/db/migrations/versions/: fdf8821871d7_main_tables.py
app/db/queries/: queries.py  tables.py
app/db/queries/sql/: users.sql
app/db/repositories/: profiles.py  users.py
app/models/domain/: profiles.py  tcgmodel.py
app/models/schemas/: jwt.py  profiles.py  tcgschema.py
app/services/: jwt.py  security.py
client/: package-lock.json  package.json
client/src/: db.json
postman/: gradedtcg.postman_collection.json  run-api-tests.sh
scripts/: format  upsert_scryfall_cards.py  upsert_scryfall_sets.py
server/: Dockerfile  setup.cfg
server/app/: main.py
server/app/api/dependencies/: authentication.py  database.py  profiles.py
server/app/api/errors/: http_error.py
server/app/api/routes/: api.py  authentication.py  profiles.py  users.py
server/app/core/: events.py  logging.py
server/app/core/settings/: production.py
server/app/db/: events.py
server/app/resources/: strings.py
server/app/services/: authentication.py  jwt.py
server/tests/: conftest.py  fake_asyncpg_pool.py
tests/test_api/test_routes/: test_login.py  test_profiles.py  test_registration.py  test_users.py
tests/test_api/test_services/: test_jwt.py
(+7 files in other folders)
