[tool.poetry]
name = "TCG Tracker"
version = "0.1.0"
description = ""
authors = ["djdduty <djdduty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyJWT = "^2.4.0"
databases = "^0.5.5"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
aiosql = "^3.4.1"
PyPika = "^0.48.9"
alembic = "^1.7.7"
python-slugify = "^6.1.2"
Unidecode = "^1.3.4"
loguru = "^0.6.0"
requests = "^2.27.1"
clint = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.950"
flake8-fixme = "^1.1.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
pytest-env = "^0.6.2"
pytest-xdist = "^2.5.0"
httpx = "^0.22.0"
asgi-lifespan = "^1.0.1"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
  --numprocesses=auto
  --asyncio-mode=auto
'''
env = [
  'SECRET_KEY=secret',
  'MAX_CONNECTIONS_COUNT=1',
  'MIN_CONNECTIONS_COUNT=1'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
